pamc/src/tests/sample_code/should_fail/type_check/illegal_type/type_param.ph
type U {
    .U: U,
}

type Foo(x: U.U) {}
